# SpotifyAnalyzer

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  requirements_dev.txt
.github/workflows/: workflow_demo.yml  workflow_pr.yml
app/: main.py
app/exceptions/: spotify_exceptions.py
app/models/: requests.py  responses.py
app/routers/: auth.py  hello_world.py  oauth.py  recommendations.py  songs.py
app/services/: spotify_auth.py  spotify_data_fetcher.py
app/services/spotify/: config.py  exceptions.py  spotify_client.py
app/services/spotify/models/: artist.py  playlist.py  schemas.py  song.py  user.py
